# editor-markdown

./: README.md  TODO.md
src/: editor.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/css_themes/: default.css
src-tauri/src/: main.rs
src-tauri/templates/: cv_EN.md  cv_RO.md  cv_soferEN.md  cv_soferRO.md  cv_studentEN.md  cv_studentRO.md  scrisoare-de-intentie-facultateEN.md  scrisoare-de-intentie-facultateRO.md  scrisoare-de-intentie-facultateRect.md  scrisoare-de-intentie-masterEN.md  scrisoare-de-intentie-masterRO.md  scrisoare-de-intentie-scurtaEN.md  scrisoare-de-intentie-scurtaRO.md  scrisoare-de-intentie-wordEN.md  scrisoare-de-intentie-wordRO.md
src/js/: export.js  language.js  main.js  utils.js
src/styles/: main.css
